--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -58,6 +58,11 @@ html * {
   color: #567482;
 }
 
+.highlight .s2 {
+  font-size: 14.4px;
+  color: #567482;
+}
+
 .highlight pre {
   background-color: #f5f5f5;
   border: solid 1px #ccc;
