--- a/docs/_layouts/index.html
+++ b/docs/_layouts/index.html
@@ -12,7 +12,7 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      <a href="documentation.html" class="btn">Documentation</a>
+      <a href="quickstart.html" class="btn">Quickstart</a>
       <a href="{{ site.github.repository_url }}/releases/tag/0.3.4" class="btn">Download 0.3.4</a>
     </header>
     <main id="content" class="main-content" role="main">
