--- a/docs/_layouts/index.html
+++ b/docs/_layouts/index.html
@@ -13,7 +13,7 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       <a href="quickstart.html" class="btn">Quickstart</a>
-      <a href="{{ site.github.repository_url }}/releases/tag/0.4.0" class="btn">Download 0.4.0</a>
+      <a href="{{ site.github.repository_url }}/releases/tag/{{site.github.latest_release.tag_name}}" class="btn">Download {{site.github.latest_release.tag_name}}</a>
     </header>
     <main id="content" class="main-content" role="main">
       {{ content }}
