Add req/resp in separate sections [skip ci] (#557)
* Add req/resp in separate sections [skip ci]

* Add details about example

* continued: Add details about example

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -37,6 +37,12 @@ html * {
   color:#337ab7;
 }
 
+.main-content h5 {
+  font-size: 15px;
+  font-weight: bold;
+  color: #333333;
+}
+
 .highlight .nv {
   font-size: 14.4px;
   color: #333333;
