--- a/docs/_layouts/index.html
+++ b/docs/_layouts/index.html
@@ -24,7 +24,7 @@
     </script>
     
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+      <img src="./assets/images/marquez-logo.png" width="500px" />
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       <a href="quickstart.html" class="btn">Quickstart</a>
