Major Marquez UI Enhancements (#1615)
* Initial push for new search experience.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Some more dashed borders.

Signed-off-by: Peter Hicks <peter@datakin.com>

* More dashed borders

Signed-off-by: Peter Hicks <peter@datakin.com>

* More general styling in the new brand.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Minor style changes.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding drawer and first pass of jobs and datasets page.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Removing all filtering mechanics and typedefs on the client side.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Working call to fetch datasets.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Renaming request prefix, so they don't conflate with action creators.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Jobs now rendering on the home page.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Basic dataset view page working.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Jobs now rendering as well.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding containers.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Reset the jobs and datasets on unmounts.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Removing filtering and adding a screen load component.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Jobs loading refactor and more filtering code removal.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Removing some old test code that is no longer needed.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Fixing up the empty state for jobs.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding namespace selection to the general app frame.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Datasets empty state and removing paging for now.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Storing the selected namespac

--- a/web/src/global_styles.css
+++ b/web/src/global_styles.css
@@ -3,10 +3,10 @@
 @value telescopeBlack: #2B2B33;
 @value offWhite: #E5E5E5;
 @value deepRed: #CC0E1D;
-@value vibrantGreen: #00965D;
+@value vibrantGreen: #71ddbf;
 @value jobNodeGrey: #7d7d7d;
 @value datasetNodeWhite: #fff;
-@value linkGrey: #aaa;
+@value linkGrey: #f3f3f3;
 @value jobRunNew: #3199FF;
 @value jobRunFailed: #CC101D;
 @value jobRunCompleted: #01965C;
