Runs and run facets for web (#1682)
* Remodeling the web facets.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Fixing the job runs import.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Removing old test and component.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding run table.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding status to the runs and moving code around.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding in the tabbing system.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding in run info component.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding table navigation.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Adding finalized prototype for a review.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Removing test.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Code review comments.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Changing back port.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Handling empty cases better.

Signed-off-by: Peter Hicks <peter@datakin.com>

Co-authored-by: Peter Hicks <peter@datakin.com>

--- a/web/src/global_styles.css
+++ b/web/src/global_styles.css
@@ -8,8 +8,7 @@
 @value datasetNodeWhite: #fff;
 @value linkGrey: #f3f3f3;
 @value jobRunNew: #3199FF;
-@value jobRunFailed: #CC101D;
-@value jobRunCompleted: #01965C;
+@value jobRunFailed: #ee7b7b;
+@value jobRunCompleted: #71ddbf;
 @value jobRunAborted: #7D7D7D;
 @value jobRunRunning: #FECC00;
-
