--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,13 +9,13 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: "Source Code Pro", Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 @font-face {
   font-family: 'Source Code Pro';
-  src: local('Source Code Pro'), url(fonts/SourceCodePro-Regular.ttf) format('truetype'), local('Source Code Pro'), url(fonts/SourceCodePro-Bold.ttf) format('truetype');
+  src: local('Source Code Pro'), url(fonts/SourceCodePro/SourceCodePro-Regular.ttf) format('truetype'), local('Source Code Pro'), url(fonts/SourceCodePro/SourceCodePro-Bold.ttf) format('truetype');
 }
 
 @font-face {
